# ai-agents

xz_demo/: .gitignore  README.md  dev.ipynb  pyproject.toml  requirements.txt
xz_demo/src/xz_demo/: crew.py  main.py
xz_demo/src/xz_demo/config/: agents.yaml  tasks.yaml
xz_demo/src/xz_demo/tools/: custom_tool.py
