[project]
name = "xz_demo"
version = "0.1.0"
description = "xz_demo using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.98.0,<1.0.0"
]

[project.scripts]
xz_demo = "xz_demo.main:run"
run_crew = "xz_demo.main:run"
train = "xz_demo.main:train"
replay = "xz_demo.main:replay"
test = "xz_demo.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
